# crop-circles

./: Makefile  README.md  abstract.py  aurora.py  data.py  horizont.py  net.py  parallel.sh  pyproject.toml  riegel.py  setup.py  tandem.py  tarnn.py
cropcircles/: __init__.py
cropcircles/deeplib/: __init__.py  augmentations.py  deepdata.py  deepmisc.py  deeputils.py
cropcircles/deeplib/deepmodules/: __init__.py  activations.py  norms.py  std.py
cropcircles/models/: abstract.py  riegel.py  tandem.py
deeplayers/: transformers.py
deeplib/: deepmodules.py  deeputils.py
horovod/: hvd.sh  parallel.sh
lib/deeplayers/: embeddings.py  hopfield.py  transformers.py
lib/deeplib/: deepmetrics.py  deeputils.py
lib/deeplib/deepmodules/: losses.py  optimizers.py
lib/models/: riegel.py  saint.py  superforest.py
lib/utils/: __init__.py  data.py  deepbar.py  deepconfig.py  deeplogger.py
models/: README.md  riegel.py
