[project]
name = "crop-circles"
version = "0.1.0"
description = "Deep learning library for tabular data problems, based on PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
    "numpy>=2.2.2",
    "horovod>=0.28.1",
    "category-encoders",
    "sklearn",
    "pandas",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
